minor housekeeping, making this run with scalac 3.3.1 and sbt 1.9.4